--- a/index.html
+++ b/index.html
@@ -419,30 +419,30 @@
                 
                 // Преобразование кода погоды в описание
                 const weatherDescriptions = {
-                    0: 'Ясно',
-                    1: 'Преимущественно ясно',
-                    2: 'Переменная облачность',
-                    3: 'Пасмурно',
-                    45: 'Туман',
-                    48: 'Туман с изморозью',
-                    51: 'Легкая морось',
-                    53: 'Умеренная морось',
-                    55: 'Сильная морось',
-                    61: 'Небольшой дождь',
-                    63: 'Умеренный дождь',
-                    65: 'Сильный дождь',
-                    71: 'Небольшой снег',
-                    73: 'Умеренный снег',
-                    75: 'Сильный снег',
-                    77: 'Снежные зёрна',
-                    80: 'Небольшой ливень',
-                    81: 'Умеренный ливень',
-                    82: 'Сильный ливень',
-                    85: 'Небольшой снегопад',
-                    86: 'Сильный снегопад',
-                    95: 'Гроза',
-                    96: 'Гроза с градом',
-                    99: 'Сильная гроза с градом'
+                    0: '☀️ Ясно',
+                    1: '🌤️ Преимущественно ясно',
+                    2: '⛅ Переменная облачность',
+                    3: '☁️ Пасмурно',
+                    45: '🌫️ Туман',
+                    48: '🌫️ Туман с изморозью',
+                    51: '🌧️ Легкая морось',
+                    53: '🌧️ Умеренная морось',
+                    55: '🌧️ Сильная морось',
+                    61: '🌧️ Небольшой дождь',
+                    63: '🌧️ Умеренный дождь',
+                    65: '🌧️ Сильный дождь',
+                    71: '🌨️ Небольшой снег',
+                    73: '🌨️ Умеренный снег',
+                    75: '🌨️ Сильный снег',
+                    77: '🌨️ Снежные зёрна',
+                    80: '🌦️ Небольшой ливень',
+                    81: '🌦️ Умеренный ливень',
+                    82: '🌦️ Сильный ливень',
+                    85: '🌨️ Небольшой снегопад',
+                    86: '🌨️ Сильный снегопад',
+                    95: '⛈️ Гроза',
+                    96: '⛈️ Гроза с градом',
+                    99: '⛈️ Сильная гроза с градом'
                 };
 
                 const description = weatherDescriptions[weatherCode] || 'Нет данных';
